# employee/storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost/employees/employee/public/",
+            "url": "http://localhost/full-emp/public/",
             "description": "Production"
         }
     ],
@@ -35,7 +35,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
